--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "author": "ibqn",
   "license": "ISC",
   "dependencies": {
+    "bluebird": "^3.5.1",
     "body-parser": "^1.18.2",
     "express": "^4.16.2",
     "mongoose": "^4.13.1",
